--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Recipe Rush | x6</title>
-  <script src="https://cdn.jsdelivr.net/npm/phaser@3/dist/phaser.min.js"></script>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="gameCanvas"></div> <!-- Phaser canvas attaches here -->
+  <div id="gameContainer">
+    <canvas id="gameCanvas" width="800" height="400"></canvas>
+    <button id="toggleScene" onclick="toggleScene()">Go to Restaurant</button>
+  </div>
   <script src="game.js"></script>
 </body>
 </html>
